samples/_failures_safe/1761363804_0e1b4e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99b2f7b3.c: In function ‘main’:
./samples/SAFE/__tmp_99b2f7b3.c:143:30: error: expected ‘)’ at end of input
  143 |     if (scanf("%d", &vertices
      |              ~               ^
      |                              )
./samples/SAFE/__tmp_99b2f7b3.c:143:5: error: expected declaration or statement at end of input
  143 |     if (scanf("%d", &vertices
      |     ^~
